--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,5 +42,5 @@ jobs:
       id: validate
       if: (success() || failure())
       run: terraform validate
-      uses: ./github/workflows/validate.yml
+      uses: ./github/workflows/validate.yaml
     
