--- a/.github/workflows/depoly.yaml
+++ b/.github/workflows/depoly.yaml
@@ -1,6 +1,8 @@
 name: hello-worldAdd commentMore actions
 
-on: push
+on:
+  workflow_call: # This makes the workflow reusable
+  
 jobs:
   my-job:
     runs-on: ubuntu-latest
