--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,4 +43,12 @@ jobs:
       if: (success() || failure())
       run: terraform validate
 
-    
+       
+      
+  validate:
+    uses: ./.github/workflows/validate.yaml
+
+  deploy:
+    uses: ./.github/workflows/deploy.yaml
+    needs: validate 
+  
